--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
@@ -110,7 +110,10 @@
                 <td></td>
                 <td></td>
             </tr>
-
+            <tr>
+                <td class="ColumnStype" style="vertical-align:top;"><label class="Font"></label></td>
+                <td colspan="3" style="color: red">Please upload measurement picture if you need</td>
+            </tr>
             <tr>
                 <td class="ColumnStype" style="vertical-align:top;"><label class="Font">Remark</label></td>
                 <td colspan="2">
