--- a/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
+++ b/Quality/Quality/Areas/FinalInspection/Views/Inspection/Others.cshtml
@@ -112,7 +112,7 @@
             </tr>
             <tr>
                 <td class="ColumnStype" style="vertical-align:top;"><label class="Font"></label></td>
-                <td colspan="3" style="color: red">Please upload measurement picture if you need</td>
+                <td colspan="3">(Please upload measurement picture if you need)</td>
             </tr>
             <tr>
                 <td class="ColumnStype" style="vertical-align:top;"><label class="Font">Remark</label></td>
